# PosterO-CVPR2025_MAIE

./: .gitignore  README.md  init_path.sh  pyproject.toml
generalized_setting/: infer.sh  llm_api_wrapper.py  main.py  utils.py
generalized_setting/layout_generate/: PosterO.py
