[project]
name = "postero-cvpr2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cairosvg>=2.8.2",
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "requests>=2.32.5",
    "segmentation-models-pytorch>=0.5.0",
    "timm>=1.0.22",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
